--- a/Original/shop/1/cart.html
+++ b/Original/shop/1/cart.html
@@ -416,7 +416,7 @@ document.addEventListener('DOMContentLoaded', () => {
             <h5>Total</h5>
             <h5 class="text-end">Total</h5>
         </div>
-        <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button>
+        <button class="btn btn-block btn-primary font-weight-bold my-3 py-3" href="invoice.html">Proceed To Checkout</button>
     </div>
 </div>
 
