--- a/Original/shop/1/shop.html
+++ b/Original/shop/1/shop.html
@@ -79,28 +79,34 @@ productElement.classList.add('col-lg-4', 'col-md-6', 'col-6', 'pb-1'); // Added 
 
 productElement.innerHTML = `
     <div class="product-item mb-4" style="background-color: white;">
-        <div class="product-img position-relative overflow-hidden">
-            <img class="img-fluid w-100" src="${imageUrl}" alt="${product.name}">
-            <div class="product-action">
-                <a class="btn btn-outline-dark btn-square add-to-cart" 
-                   data-product='${JSON.stringify(product)}'>
-                    <i class="fa fa-shopping-cart"></i>
-                </a>
-            </div>
-        </div>
-        <div class="text-center py-4">
-            <a class="h6 text-decoration-none text-truncate d-block" href="open.html?id=${product.id}">
-                ${product.name}
+    <div class="product-img position-relative overflow-hidden">
+        <img class="img-fluid w-100" src="${imageUrl}" alt="${product.name}">
+        <div class="product-action">
+            <a class="btn btn-outline-dark btn-square add-to-cart" 
+               data-product='${JSON.stringify(product)}'>
+                <i class="fa fa-shopping-cart"></i>
             </a>
-            <div class="d-flex align-items-center justify-content-center mt-2">
-                <h6>LKR ${parseFloat(product.price).toFixed(2)}</h6>
-            </div>
-            <div class="d-flex align-items-center justify-content-center mb-1">
-                ${starHtml} 
-                <small class="ml-1">(${rating})</small>
-            </div>
         </div>
     </div>
+    <div class="text-center py-4">
+        <a class="h6 text-decoration-none text-truncate d-block" href="open.html?id=${product.id}">
+            ${product.name}
+        </a>
+        <div class="d-flex align-items-center justify-content-center mt-2">
+            <h6>LKR ${parseFloat(product.price).toFixed(2)}</h6>
+        </div>
+        <div class="d-flex align-items-center justify-content-center mb-1">
+            ${starHtml} 
+            <small class="ml-1">(${rating})</small>
+        </div>
+        <!-- Add the description here (visible only in list view) -->
+        <div class="list-view-description">
+            <p class="description">
+                ${product.description} <!-- Replace with your product description -->
+            </p>
+        </div>
+    </div>
+</div>
 `;
 
 productsContainer.appendChild(productElement);
@@ -466,9 +472,22 @@ document.addEventListener('DOMContentLoaded', () => {
                     <div class="col-12 pb-1">
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <div>
-                                <button class="btn btn-sm btn-light"><i class="fa fa-th-large"></i></button>
-                                <button class="btn btn-sm btn-light ml-2"><i class="fa fa-bars"></i></button>
+                                
+                                <button id="toggle-view-btn" class="btn btn-sm btn-light ml-2">
+                                    <i class="fa fa-bars"></i>
+                                </button>
                             </div>
+
+<script>document.addEventListener('DOMContentLoaded', () => {
+    const toggleViewBtn = document.getElementById('toggle-view-btn');
+    const productsContainer = document.getElementById('products');
+
+    // Toggle list view on button click
+    toggleViewBtn.addEventListener('click', () => {
+        productsContainer.classList.toggle('list-view');
+    });
+});</script>
+
                             <div class="ml-2">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">Sorting</button>
