--- a/Original/shop/1/index.html
+++ b/Original/shop/1/index.html
@@ -361,7 +361,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Sell with Ease</h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Yunoxa is a free online store where anyone can sell their products effortlessly. Our platform is designed to help you reach customers quickly and grow your business.</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="shop.html">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -371,7 +371,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Island-Wide Delivery</h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn">We offer island-wide delivery, ensuring your products reach customers no matter where they are. Enjoy a seamless and reliable shipping experience with Yunoxa.</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="shop.html">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -381,7 +381,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Join Our Community</h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Whether you're a seller or a buyer, Yunoxa connects you to a vibrant marketplace. Start selling or shop unique products today!</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="shop.html">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -389,22 +389,7 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-1.jpg" alt="">
-                    <div class="offer-text">
-                        <h6 class="text-white text-uppercase">Save 20%</h6>
-                        <h3 class="text-white mb-3">Special Offer</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
-                    </div>
-                </div>
-                <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-2.jpg" alt="">
-                    <div class="offer-text">
-                        <h6 class="text-white text-uppercase">Save 20%</h6>
-                        <h3 class="text-white mb-3">Special Offer</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
