--- a/Original/shop/1/create.html
+++ b/Original/shop/1/create.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="btn-group mx-2">
-                        <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">USD</button>
+                        <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">LKR</button>
                         <div class="dropdown-menu dropdown-menu-right">
                             <button class="dropdown-item" type="button">EUR</button>
                             <button class="dropdown-item" type="button">GBP</button>
@@ -70,7 +70,7 @@
         </div>
         <div class="row align-items-center bg-light py-3 px-xl-5 d-flex">
             <div class="col-lg-4 col-12 text-center text-lg-left mb-3 mb-lg-0">
-                <a href="" class="text-decoration-none">
+                <a href="index.html" class="text-decoration-none">
                     <span class="h1 text-uppercase text-primary bg-dark px-2">YU</span>
                     <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1">NOXA</span>
                 </a>
@@ -85,13 +85,13 @@
             <input type="text" id="name" required>
 
             <label for="details">Details</label>
-            <input type="text" id="details" required>
+<textarea id="details" rows="5" required></textarea>
 
             <label for="price">Price</label>
             <input type="number" id="price" required>
 
             <label for="description">Description</label>
-            <input type="text" id="description" required>
+<textarea id="description" rows="5" required></textarea>
 
             <!-- Category Dropdown -->
             <label for="category">Category</label>
